implement database update of the replicas after sucessful transaction

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -99,8 +99,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "955f75ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'transaction number': 0, 'stock name': 'aapl', 'order type': 'sell', 'quantity': 10}, {'transaction number': 2, 'stock name': 'safe', 'order type': 'buy', 'quantity': 10}, {'transaction number': 1, 'stock name': 'mmaewf', 'order type': 'sell', 'quantity': 11}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "orders = []\n",
+    "orders.append(\n",
+    "    {\n",
+    "        \"transaction number\": 0,\n",
+    "        \"stock name\": \"aapl\",\n",
+    "        \"order type\": \"sell\",\n",
+    "        \"quantity\": 10\n",
+    "    }\n",
+    ")\n",
+    "orders.append(\n",
+    "    {\n",
+    "        \"transaction number\": 2,\n",
+    "        \"stock name\": \"safe\",\n",
+    "        \"order type\": \"buy\",\n",
+    "        \"quantity\": 10\n",
+    "    }\n",
+    ")\n",
+    "orders.append(\n",
+    "    {\n",
+    "        \"transaction number\": 1,\n",
+    "        \"stock name\": \"mmaewf\",\n",
+    "        \"order type\": \"sell\",\n",
+    "        \"quantity\": 11\n",
+    "    }\n",
+    ")\n",
+    "print(orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "87c5c83e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'transaction number': 0, 'stock name': 'aapl', 'order type': 'sell', 'quantity': 10}, {'transaction number': 1, 'stock name': 'mmaewf', 'order type': 'sell', 'quantity': 11}, {'transaction number': 2, 'stock name': 'safe', 'order type': 'buy', 'quantity': 10}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_orders = sorted(orders, key=lambda x: x[\"transaction number\"], reverse=False)\n",
+    "print(new_orders)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2b3d336e",
    "metadata": {},
    "outputs": [],
    "source": []
